--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -592,7 +592,7 @@
     <br><br>
     <!-- <p>Terakhir diupdate: 2 Feb 2024</p> -->
     <!-- <p>Terakhir diupdate: 29 Nov 2024</p> -->
-    <p>Terakhir diupdate: 20 Jan 2025</p>
+    <p>Terakhir diupdate: 22 Jan 2025</p>
 
     <script>
         // Time
@@ -679,6 +679,7 @@
             }
         }
         
+        a = 0;
         function buat() {
 			var bs = document.getElementById("pilihan-bentuk-soal");
             var bs2 = bs.options[bs.selectedIndex];
@@ -918,6 +919,42 @@
                     hasil = `${(a*b2+b*a2)/dibagi}/${(b*b2)/dibagi}`;
                 }
                 console.log(hasil);
+            } else if (e1.index == 10) {
+            } else if (e1.index == 11) {
+                // var a;
+                var a2;
+                while (a2 === undefined | a == a2) {
+                    if (level2.index == 0) {
+                        a2 = Math.floor(1 + 10 * Math.random());
+                        hasil = a2*a2;
+                        pangkat = 2;
+                    } else if (level2.index == 1) {
+                        if (Math.random() < 0.5) {
+                            a2 = Math.floor(11 + 20 * Math.random());
+                            hasil = a2*a2;
+                            pangkat = 2;
+                        } else {
+                            a2 = Math.floor(1 + 20 * Math.random());
+                            hasil = a2*a2*a2;
+                            pangkat = 3;
+                        }
+                    } else {
+                        if (Math.random() < 1/3) {
+                            a2 = Math.floor(31 + 170 * Math.random());
+                            hasil = a2*a2;
+                            pangkat = 2;
+                        } else if (Math.random() < 2/3) {
+                            a2 = Math.floor(21 + 80 * Math.random());
+                            hasil = a2*a2*a2;
+                            pangkat = 3;
+                        } else {
+                            a2 = Math.floor(1 + 30 * Math.random());
+                            hasil = a2*a2*a2*a2;
+                            pangkat = 4;
+                        }
+                    }
+                }
+                a = a2;
             }
 			
 			function bersusun(a,b,tanda) {
@@ -1043,9 +1080,10 @@
                         soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
 						document.getElementById('tipe2').style.display = 'block';
 					} else if (e1.index == 11) {
-						soal_teks = `Hasil dari &nbsp;<span style="font-size:20px">/(5^2/)`.replaceAll("/","&#x005c");
+						// soal_teks = `Hasil dari &nbsp;<span style="font-size:20px">/(5^2/)`.replaceAll("/","&#x005c");
+                        soal_teks = `Hasil dari &nbsp;<span style="font-size:20px">/(${a}^${pangkat}/)`.replaceAll("/","&#x005c");
 						soal_teks += `</span>&nbsp; adalah ...`
-                        soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
+                        // soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
 					} else if (e1.index == 12) {
 						soal_teks = `Hasil dari &nbsp;<span style="font-size:20px">/(/sqrt{16}/)`.replaceAll("/","&#x005c");
 						soal_teks += `</span>&nbsp; adalah ...`;
