--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
     <div class="top-container heading">
         <div class="top-container2" id="top-container2" style="height:46px;"></div>
-        <script src="script.js"></script>
+        <!-- <script src="script.js"></script> -->
         <div class="page-container">
             <a href="index.html">Home</a>
             <a class="page-selected" href="blog.html">Blog</a>
@@ -67,26 +67,26 @@
             <br>
             </p>
             <div class="gallery" style="width:300px;">
-                <img class="image" id="img01" src="images/IMG_6228.JPG">
+                <img class="image" id="img001" src="images/IMG_6228.JPG">
                 <!-- <div class="desc" id="image-desc">Gambar 1: Pegunungan</div> -->
-                <div class="desc" id="img01d">Gambar 1: Pegunungan</div>
+                <div class="desc" id="img001d">Gambar 1: Pegunungan</div>
                 <!-- The Modal -->
-                <div id="myModalImage" class="modal-image">
-                    <span class="close">&times;</span>
-                    <img class="modal-image-content" id="img01m">
-                    <!-- <div id="caption"></div> -->
-                    <div id="img01c"></div>
-                </div>
             </div>
             <div class="gallery" style="width:300px;">
-                <img class="image" id="img02" src="images/IMG_6168.JPG" width="300">
-                <div class="desc" id="img02d">Gambar 2: Matahari terbit / Sunrise</div>
-                <div id="myModalImage2" class="modal-image">
+                <img class="image" id="img002" src="images/IMG_6168.JPG" width="300">
+                <div class="desc" id="img002d">Gambar 2: Matahari terbit / Sunrise</div>
+                <!-- <div id="myModalImage2" class="modal-image">
                     <span class="close">&times;</span>
                     <img class="modal-image-content" id="img02m">
                     <div id="img02c"></div>
-                </div>
+                </div> -->
             </div>
+			<div id="myModalImage" class="modal-image">
+				<span class="close" id="imgclose">&times;</span>
+				<img class="modal-image-content" id="imgmodal">
+				<!-- <div id="caption"></div> -->
+				<div id="imgdesc" style="color:white; text-align:center; padding-top:50px;">Bagus bagus bagus</div>
+			</div>
             <div class="clearfix"></div>
             <!-- <div class="text"> <p> -->
             <span>
@@ -152,10 +152,19 @@
 
         <p class="heading" id="3" style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
         <div class="container2">
-            <div class="image">
+            <!-- <div class="image">
                 <img src="images/Sertifikat OSN.jpg" width="200">
                 <img src="images/Devan OSN 23.jpg" width="250">
+            </div> -->
+			<div class="gallery" style="width:200px;">
+                <img class="image" id="img003" src="images/Sertifikat OSN.jpg">
+                <div class="desc" id="img003d">Gambar 3: Sertifikat KMT PPO Jateng</div>
             </div>
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img004" src="images/Devan OSN 23.jpg" width="300">
+                <div class="desc" id="img004d">Gambar 4: Foto saat lomba KMT PPO Jateng</div>
+            </div>
+			<div class="clearfix"></div>
             <p>
             Mata pelajaran yang paling saya sukai adalah Matematika. Sejak dari kecil nilai matematika saya yang paling tinggi dibanding mata pelajaran lain.
             Banyak lomba yang sudah saya ikuti. Lomba antar sekolah baik itu di Mall, Open House Sekolah maupun tingkat Olimpiade. Kadang saya dapat juara terkadang juga tidak.
@@ -293,8 +302,9 @@
     <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 7 Mei 2024<br>
-        Copyright © 2024 by Devan
+        <!-- Terakhir diupdate: 7 Mei 2024<br> -->
+		Terakhir diupdate: 30 Jan 2025<br>
+        Copyright © 2025 by Devan
         </p>
     </footer>
 </body>
