--- a/blog.html
+++ b/blog.html
@@ -258,11 +258,15 @@
             <br><br><br>
             <span style="font-size:23px; color:#000080;"><b>Hari kedua</b></span>
             <br><br>
-            Hari kedua di Bali, yaitu hari Minggu. Cucu-cucu dari keluarga saya berenang di sebuah hotel dan aku sempat sarapan. Setelah itu. Di sore hari, kita ke pantai Pandawa untuk melihat sunset yang indah.
+            Hari kedua di Bali, yaitu hari Minggu. Cucu-cucu dari keluarga saya berenang di sebuah hotel dan aku sempat sarapan. Setelah itu, kita ke pantai Kuta dengan menaiki kapal kecil untuk melihat indahnya laut di sekitar pantai Kuta. Selain itu, ada yang sempat main flying fox, lalu juga sempat foto sama hewan di pinggir pantai. Di sore hari, kita ke pantai Pandawa untuk melihat sunset yang indah, namun tidak sempat karena kondisi jalanan yang padat dan sudah sore, sehingga hanya merasakan pantainya dan sempat sedikit basah kakinya.
             <br><br><br>
             <span style="font-size:23px; color:#000080;"><b>Hari ketiga</b></span>
+	    <br><br>
+	    Di hari ketiga ini, keluarga saya pergi ke Ubud untuk ke Monkey Forest. Di sore hari, kita sempat nyasar di rawa-rawa sebelum pulang ke hotel.
             <br><br><br>
             <span style="font-size:23px; color:#000080;"><b>Hari keempat</b></span>
+	    <br><br>
+	    Setelah libur Lebaran yang cukup panjang, akhirnya pulang ke Semarang.
             <br><br><br>
             <b>Catatan:</b><br>
             <!-- <ul><li> -->
@@ -342,7 +346,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 7 Mei 2024<br> -->
-		Terakhir diupdate: 31 Jan 2025<br>
+        Terakhir diupdate: 3 Feb 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
