--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
 </head>
+<style>
+    html {
+        /* --darkmode: 0; */
+        --darkmode: 1;
+        container-name: root;
+        container-type: normal;
+    }
+</style>
 <body>
     <div class="top-container heading">
         <!-- <div class="dropdown" style="margin-right:20px; float:left;">
@@ -46,16 +54,16 @@
             <p>
             <b>Link program dalam projects:</b><br>
             <ol>
-                <li><a href="#1">Program Streamlit</a></li>
-                <li><a href="#2">Bangun Datar</a></li>
-                <li><a href="#3">Progress Bar</a></li>
-                <li><a href="#4">BMI Calculator</a></li>
-                <li><a href="#5">Soal Pertanyaan</a></li>
-                <li><a href="#6">Penghitung Waktu</a></li>
-                <li><a href="#7">Labirin</a></li>
-                <li><a href="#8">Kumpulan Animasi</a></li>
-                <li><a href="#9">Kalkulator Sederhana</a></li>
-                <li><a href="#10">Project dari Website Lain</a></li>
+                <li><a class="link" href="#1">Program Streamlit</a></li>
+                <li><a class="link" href="#2">Bangun Datar</a></li>
+                <li><a class="link" href="#3">Progress Bar</a></li>
+                <li><a class="link" href="#4">BMI Calculator</a></li>
+                <li><a class="link" href="#5">Soal Pertanyaan</a></li>
+                <li><a class="link" href="#6">Penghitung Waktu</a></li>
+                <li><a class="link" href="#7">Labirin</a></li>
+                <li><a class="link" href="#8">Kumpulan Animasi</a></li>
+                <li><a class="link" href="#9">Kalkulator Sederhana</a></li>
+                <li><a class="link" href="#10">Project dari Website Lain</a></li>
             </ol>
         </div>
 		<br><br>
@@ -70,14 +78,14 @@
             <div class="clearfix"></div>
             <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
-                <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> - Version 1.4</li>
-                <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
-                <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
-                <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
-                <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
-                <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
-                <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
-                <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
+                <li><a class="link" href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> - Version 1.4</li>
+                <li><a class="link" href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
+                <li><a class="link" href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
+                <li><a class="link" href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
+                <li><a class="link" href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
+                <li><a class="link" href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
+                <li><a class="link" href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
+                <li><a class="link" href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
             </ul>
         </div><br>
         <p class="heading" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
@@ -89,8 +97,8 @@
 			<!-- <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p> -->
             <!-- <li>Bangun Ruang (Sedang dibuat)</li> -->
 			<ul>
-				<li><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</li>
-                <li><a href="projects/Bangun Ruang.html"></a>Bangun Ruang</li>
+				<li><a class="link" href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</li>
+                <li><a class="link" href="projects/Bangun Ruang.html"></a>Bangun Ruang</li>
                 <li>Persamaan (Coming soon)</li>
                 <li>Grafik (Coming soon)</li>
 			</ul>
@@ -98,47 +106,47 @@
         <p class="heading" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
         <div class="container2">
             <p>Progress bar yang baru</p>
-            <a href="projects/Progress Bar.html">Progress Bar HTML</a>
+            <a class="link" href="projects/Progress Bar.html">Progress Bar HTML</a>
         </div><br>
         <p class="heading" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
         <div class="container2">
             <img src="images/bmi-image.jpg" width="150">
             <div class="clearfix"></div>
             <p>Ada program untuk menghitung BMI tubuh, berdasarkan berat dan tinggi badan.</p>
-            <a href="projects/BMI calculator.html">BMI Calculator</a>
+            <a class="link" href="projects/BMI calculator.html">BMI Calculator</a>
         </div><br>
         <p class="heading" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
         <div class="container2">
 			<img src="images/soal-matematika.jpg" width="200">
             <div class="clearfix"></div>
             <p>Soal Pertanyaan dalam Matematika berisi beberapa jenis pertanyaan, yaitu penjumlahan, pengurangan, perkalian, pembagian, dan sebagainya. Lalu ada tingkat kesulitan yang berbeda-beda, dan terdiri dari isian dan pilihan ganda. Selain itu, ada timer untuk setiap soal pada pengaturan.</p>
-            <a href="projects/Soal Matematika.html">Soal Matematika</a>
-        </div>
+            <a class="link" href="projects/Soal Matematika.html">Soal Matematika</a>
+        </div><br>
         <p class="heading" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
         <div class="container2">
             <p>Penghitung Waktu</p>
-            <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
-        </div>
+            <a class="link" href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
+        </div><br>
         <p class="heading" id="7" style="font-size: 25px"><b>7. Kumpulan Permainan (Labirin / Maze)</b></p>
 	    <div class="container2">
             <p>Permainan Labirin dalam Puzzle<br>Tanggal dibuat: 6 Feb 2024</p>
-            <a href="projects/Kumpulan Permainan.html">Kumpulan Permainan</a>
-        </div>
+            <a class="link" href="projects/Kumpulan Permainan.html">Kumpulan Permainan</a>
+        </div><br>
         <p class="heading" id="8" style="font-size: 25px"><b>8. Kumpulan Animasi</b></p>
         <div class="container2">
             <p>Kumpulan Animasi<br>Tanggal dibuat: 21 Feb 2024</p>
-            <a href="projects/Kumpulan Animasi.html">Kumpulan Animasi</a>
-        </div>
+            <a class="link" href="projects/Kumpulan Animasi.html">Kumpulan Animasi</a>
+        </div><br>
         <p class="heading" id="9" style="font-size: 25px"><b>9. Kalkulator Peluang</b></p>
         <div class="container2">
             <p>Kalkulator Peluang<br>Bulan dibuat: Mei 2024</p>
-            <a href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Sedang dibuat)</a>
-        </div>
+            <a class="link" href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Sedang dibuat)</a>
+        </div><br>
 		<p class="heading" id="10" style="font-size: 25px"><b>10. Kalkulator Sederhana</b></p>
         <div class="container2">
             <p>Kalkulator Sederhana<br>Bulan dibuat: Mei 2024</p>
-            <a href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana</a>
-        </div>
+            <a class="link" href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana</a>
+        </div><br>
 		<p class="heading" id="11" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
         <p class="heading" id="12" style="font-size: 25px"><b>12. [Coming Soon] (v1.10)</b></p>
@@ -171,7 +179,8 @@
     <!-- Terakhir diupdate: 24 Mei 2024<br> -->
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 13 Nov 2024<br>
+        <!-- Terakhir diupdate: 13 Nov 2024<br> -->
+        Terakhir diupdate: 7 Feb 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
