--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <style>
     html {
         /* --darkmode: 0; */
-        --darkmode: 1;
+        --darkmode: 0;
         container-name: root;
         container-type: normal;
     }
@@ -51,8 +51,7 @@
         </p>
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
-            <p>
-            <b>Link program dalam projects:</b><br>
+            <p><b>Link program dalam projects:</b></p>
             <ol>
                 <li><a class="link" href="#1">Program Streamlit</a></li>
                 <li><a class="link" href="#2">Bangun Datar</a></li>
@@ -180,7 +179,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
-        Terakhir diupdate: 7 Feb 2025<br>
+        Terakhir diupdate: 10 Feb 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
