--- a/timeline.html
+++ b/timeline.html
@@ -62,12 +62,16 @@
         <p class="heading color002" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
-            1. <a class="link" href="#1">Sebelum Tahun 2020</a><br>
-            2. <a class="link" href="#2">Tahun 2020</a><br>
-            3. <a class="link" href="#3">Tahun 2021</a><br>
-            4. <a class="link" href="#4">Tahun 2022</a><br>
-            5. <a class="link" href="#5">Tahun 2023</a><br>
-			6. <a class="link" href="#6">Tahun 2024</a>
+            <b>Link timeline:</b><br>
+            <ol>
+                <li><a class="link" href="#1">Sebelum Tahun 2020</a></li>
+                <li><a class="link" href="#2">Tahun 2020</a></li>
+                <li><a class="link" href="#3">Tahun 2021</a></li>
+                <li><a class="link" href="#4">Tahun 2022</a></li>
+                <li><a class="link" href="#5">Tahun 2023</a></li>
+			    <li><a class="link" href="#6">Tahun 2024</a></li>
+                <li><a class="link" href="#7">Tahun 2025</a></li>
+            </ol>
             </p>
         </div>
         <br>
@@ -145,6 +149,22 @@
             </ul>
         </div><br>
 
+        <p class="heading" id="6" style="font-size: 25px"><b>7. Tahun 2025</b></p>
+        <div class="container2">
+            <p>Pada tahun 2025 ini</p>
+            <ul>
+                <li>
+                    <b>Januari 2025</b><br>
+                </li><br>
+                <li>
+                    <b>Februari 2025</b><br>
+                </li><br>
+                <li>
+                    <b>Maret 2025</b><br>
+                </li>
+            </ul>
+        </div><br>
+
         <br>
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
@@ -152,7 +172,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 26 Mei 2024<br> -->
-        Terakhir diupdate: 19 Feb 2025<br>
+        Terakhir diupdate: 28 Feb 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
